--- a/wp-content/themes/goiteens/assets/scss/layout/page/goiteens-international/_form.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/goiteens-international/_form.scss
@@ -1,8 +1,102 @@
-.international{
-    @include media_min(sm-min){
-            
+.international {
+  .box {
+    margin: 0 auto;
+    position: relative;
+    width: 295px;
+    padding: 40px 8px 20px;
+    background: #ffffff;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 20px;
+    @include media_min(sm-min) {
+      width: 100%;
+      padding: 36px;
     }
-    @include media_min(lg-min-m){
-       
+    @include media_min(lg-min-m) {
+      width: 396px;
+      padding: 32px;
     }
+    
+    &_description {
+      display: block;
+      text-align: center;
+      font-size: 20px;
+      font-weight: 800;
+      margin-bottom: 14px;
+      & span {
+        text-transform: uppercase;
+        color: #679bff;
+      }
+      @include media_min(sm-min) {
+        margin: 0 auto 24px;
+        max-width: 330px;
+
+      }
+      @include media_min(lg-min-m) {
+        margin: 0 auto 28px;
+        max-width: 330px;
+      }
+    }
+    & .form {
+        
+      display: flex;
+      flex-direction: column;
+      gap: 24px;
+
+      @include media_min(sm-min) {
+        flex-direction: row;
+        flex-wrap: wrap;
+        column-gap: 79px;
+      }
+      @include media_min(lg-min-m) {
+        flex-direction: column;
+      }
+      &_item {
+        @include media_min(sm-min) {
+          width: 44%;
+        }
+        @include media_min(lg-min-m) {
+            width: 100%;
+        }
+      }
+      & > .reg-btn {
+        display: block;
+        margin: 0 auto;
+        @include media_min(sm-min){
+width: 44%;
+margin: auto 0 0 0;
+        }
+        @include media_min(lg-min-m) {
+            width: 100%;
+        }
+      }
+
+      &_label {
+        display: block;
+        margin-bottom: 10px;
+        font-size: 13px;
+        @include media_min(sm-min) {
+          margin-bottom: 14px;
+        }
+        @include media_min(lg-min-m) {
+          margin-bottom: 10px;
+        }
+      }
+      &_input {
+        display: block;
+        height: 38px;
+        width: 100%;
+        font-size: 14px;
+        border-radius: 40px;
+        border: 1px solid black;
+        transition: border 750ms;
+        &:hover,
+        &:focus {
+          border: 2px dashed #679bff;
+        }
+        @include media_min(sm-min) {
+          height: 49px;
+        }
+      }
+    }
+  }
 }
