--- a/wp-content/themes/goiteens/assets/scss/layout/page/goiteens-international/_form.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/goiteens-international/_form.scss
@@ -15,7 +15,7 @@
       width: 396px;
       padding: 32px;
     }
-    
+
     &_description {
       display: block;
       text-align: center;
@@ -29,7 +29,6 @@
       @include media_min(sm-min) {
         margin: 0 auto 24px;
         max-width: 330px;
-
       }
       @include media_min(lg-min-m) {
         margin: 0 auto 28px;
@@ -37,7 +36,6 @@
       }
     }
     & .form {
-        
       display: flex;
       flex-direction: column;
       gap: 24px;
@@ -55,18 +53,18 @@
           width: 44%;
         }
         @include media_min(lg-min-m) {
-            width: 100%;
+          width: 100%;
         }
       }
       & > .reg-btn {
         display: block;
         margin: 0 auto;
-        @include media_min(sm-min){
-width: 44%;
-margin: auto 0 0 0;
+        @include media_min(sm-min) {
+          width: 44%;
+          margin: auto 0 0 0;
         }
         @include media_min(lg-min-m) {
-            width: 100%;
+          width: 100%;
         }
       }
 
@@ -97,6 +95,85 @@ margin: auto 0 0 0;
           height: 49px;
         }
       }
+    }
+
+    .java,
+    .small-html,
+    .small-tag {
+      position: absolute;
+      background-color: #ffffff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      border-radius: 50%;
+      & > svg{
+        max-width: 100%;
+        max-height: 70%;
+      }
+    }
+    .java {
+        top:100px;
+        right: -10px;
+      width: 29px;
+      height: 29px;
+      @include media_min(sm-min) {
+        top:50px;
+        right:110px;
+        width: 52px;
+        height: 52px;
+      }
+      @include media_min(lg-min-m) {
+        top:180px;
+        right:-40px;
+        width: 68px;
+        height: 68px;
+      }
+      & > svg{
+        fill:#43629E;
+      }
+    }
+    .small-html {
+        bottom:28px;
+        right: -13px;
+      width: 42px;
+      height: 42px;
+      @include media_min(sm-min) {
+        bottom:-20px;
+        left: -20px;
+        width: 53px;
+        height: 53px;
+      }
+      @include media_min(lg-min-m) {
+        bottom:20px;
+        left:-40px;
+        width: 66px;
+        height: 66px;
+      }
+      & > svg{
+       fill:#FFA2E0;
+      }
+    }
+    .small-tag {
+        top:90px;
+        left:-20px;
+      width: 42px;
+      height: 42px;
+      @include media_min(sm-min) {
+        top:-20px;
+        left:150px;
+        width: 56px;
+        height: 56px;
+      }
+      @include media_min(lg-min-m) {
+        top:70px;
+        left:-40px;
+        width: 59px;
+        height: 59px;
+      }
+      & > svg{
+        fill:#FEC830;
+       }
     }
   }
 }
