--- a/wp-content/themes/goiteens/assets/scss/base/_variables.scss
+++ b/wp-content/themes/goiteens/assets/scss/base/_variables.scss
@@ -51,7 +51,7 @@ $color-sale-yellow  :   #FED32B;
 $color-sale-purple  :   #AA43A2;
 $color-sale-ashen   :   #F9F0F8;
 $color-sale-black   :   #202020;
-$color-tabs-yellow   :   #FEC830;
+$color-tabs-yellow  :   #FEC830;
 $color-xmas-btn     :   #19A1CC;
 $color-xmas-red     :   #D10000;
 $color-xmas-beige   :   #F7F6F4;
@@ -70,4 +70,15 @@ $color-nm-marker    :   #FFF2CC;
 $color-nm-text-mid  :   #504C5C;
 $color-nm-text-gray :   #3F3F3F;
 $color-nm-counter-bg:   #FFE58A;
-$color-nm-social:       #5D778E;
+$color-nm-social    :   #5D778E;
+$text-int           :   #2E2F30;
+$light-blue-int     :   #679bff;
+$active-blue-int    :   #3574ef;
+$svg-pink-int       :   #FFA2E0;
+$svg-blue-int       :   #43629E;
+$svg-yellow-int     :   #FEC830;
+$light-bgc-int      :   #f6f8fc;
+$bgc-int            :   #FCFCFC;
+$shadow-btn         :   #4987ff;
+$backdrop-bgc       :   rgba(230, 230, 230, 0.8);
+$lg-color-gray      :   #F6F8FC;
