--- a/wp-content/themes/goiteens/assets/scss/layout/page/goiteens-international/_modal.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/goiteens-international/_modal.scss
@@ -1,11 +1,36 @@
-.international{
+.international {
+  .backdrop {
+    position: fixed;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    background: $backdrop-bgc;
+    transition-property: opacity, visibility;
+    transition-duration: 750ms;
 
-    .backdrop{
-        @include media_min(sm-min){
-            
-        }
-        @include media_min(lg-min-m){
-           
-        }
+    .is-hidden {
+      opacity: 0;
+      pointer-events: none;
+      visibility: hidden;
     }
+    .modal {
+      width: 295px;
+      background: $bgc-int;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      margin: 0 auto;
+      padding: 40px 8px 20px;
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      border-radius: 20px;
+      @include media_min(sm-min) {
+        width: 96%;
+        padding: 36px;
+      }
+    }
+    @include media_min(lg-min-m) {
+      display: none;
+    }
+  }
 }
