--- a/wp-content/themes/goiteens/assets/scss/layout/page/goiteens-international/_form.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/goiteens-international/_form.scss
@@ -4,7 +4,7 @@
     position: relative;
     width: 295px;
     padding: 40px 8px 20px;
-    background: #ffffff;
+    background: $color-white;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 20px;
     @include media_min(sm-min) {
@@ -85,11 +85,11 @@
         width: 100%;
         font-size: 14px;
         border-radius: 40px;
-        border: 1px solid black;
+        border: 1px solid $color-black;
         transition: border 750ms;
         &:hover,
         &:focus {
-          border: 2px dashed #679bff;
+          border: 2px dashed $light-blue-int;
         }
         @include media_min(sm-min) {
           height: 49px;
@@ -101,79 +101,83 @@
     .small-html,
     .small-tag {
       position: absolute;
-      background-color: #ffffff;
+      background-color: $color-white;
       display: flex;
       justify-content: center;
       align-items: center;
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
       border-radius: 50%;
-      & > svg{
+      transition: background-color 750ms;
+      &:hover{
+        background-color: $lg-color-gray;
+      }
+      & > svg {
         max-width: 100%;
         max-height: 70%;
       }
     }
     .java {
-        top:100px;
-        right: -10px;
+      top: 100px;
+      right: -10px;
       width: 29px;
       height: 29px;
       @include media_min(sm-min) {
-        top:50px;
-        right:110px;
+        top: 50px;
+        right: 110px;
         width: 52px;
         height: 52px;
       }
       @include media_min(lg-min-m) {
-        top:180px;
-        right:-40px;
+        top: 180px;
+        right: -40px;
         width: 68px;
         height: 68px;
       }
-      & > svg{
-        fill:#43629E;
+      & > svg {
+        fill: $svg-blue-int;
       }
     }
     .small-html {
-        bottom:28px;
-        right: -13px;
+      bottom: 28px;
+      right: -13px;
       width: 42px;
       height: 42px;
       @include media_min(sm-min) {
-        bottom:-20px;
+        bottom: -20px;
         left: -20px;
         width: 53px;
         height: 53px;
       }
       @include media_min(lg-min-m) {
-        bottom:20px;
-        left:-40px;
+        bottom: 20px;
+        left: -40px;
         width: 66px;
         height: 66px;
       }
-      & > svg{
-       fill:#FFA2E0;
+      & > svg {
+        fill: $svg-pink-int;
       }
     }
     .small-tag {
-        top:90px;
-        left:-20px;
+      top: 90px;
+      left: -20px;
       width: 42px;
       height: 42px;
       @include media_min(sm-min) {
-        top:-20px;
-        left:150px;
+        top: -20px;
+        left: 150px;
         width: 56px;
         height: 56px;
       }
       @include media_min(lg-min-m) {
-        top:70px;
-        left:-40px;
+        top: 70px;
+        left: -40px;
         width: 59px;
         height: 59px;
       }
-      & > svg{
-        fill:#FEC830;
-       }
+      & > svg {
+        fill: $svg-yellow-int;
+      }
     }
   }
 }
