--- a/wp-content/themes/goiteens/assets/scss/layout/page/goiteens-international/_reg-btn.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/goiteens-international/_reg-btn.scss
@@ -5,16 +5,16 @@
     font-weight: 700;
     font-size: 16px;
     cursor: pointer;
-    color: white;
+    color: $color-white;
     display: block;
-    background-color: #679bff;
+    background-color: $light-blue-int;
     border-radius: 40px;
     border: transparent;
     transition: background-color 750ms, box-shadow 750ms;
     &:hover,
     &:focus {
-      background: #3574ef;
-      box-shadow: 0px 0px 8px #4987ff;
+      background: $active-blue-int;
+      box-shadow: 0px 0px 8px $shadow-btn;
     }
     @include media_min(sm-min) {
       margin: 0 auto;
