--- a/wp-content/themes/goiteens/assets/scss/layout/page/goiteens-international/_students-projects.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/goiteens-international/_students-projects.scss
@@ -63,7 +63,7 @@
     }
     &_item {
       width: 100%;
-      background-color: white;
+      background-color: $color-white;
       border-radius: 10px;
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
       @include media_min(sm-min) {
