--- a/wp-content/themes/goiteens/assets/scss/base/_variables.scss
+++ b/wp-content/themes/goiteens/assets/scss/base/_variables.scss
@@ -76,7 +76,7 @@ $light-blue-int     :   #679bff;
 $active-blue-int    :   #3574ef;
 $svg-pink-int       :   #FFA2E0;
 $svg-blue-int       :   #43629E;
-$svg-yellow-int     :   #FEC830;
+$svg-yellow-int     :   #fec730af;
 $light-bgc-int      :   #f6f8fc;
 $bgc-int            :   #FCFCFC;
 $shadow-btn         :   #4987ff;
