--- a/wp-content/themes/goiteens/assets/scss/layout/page/goiteens-international/_modal.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/goiteens-international/_modal.scss
@@ -26,9 +26,40 @@
       border-radius: 20px;
       @include media_min(sm-min) {
         width: 96%;
+        max-width: 738px;
         padding: 36px;
       }
+      & .close-btn{
+        width: 30px;
+        height: 30px;
+        position: absolute;
+        background-color: transparent;
+        top:14px;
+        right: 14px;
+        color: $text-int;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50%;
+        border: transparent;
+        outline: transparent;
+        transition: background-color 750ms, border 750ms;
+        @include media_min(sm-min) {
+            top:36px;
+        right: 36px;
+        }
+        &:hover, &:focus{
+            background-color:$svg-yellow-int;
+            border: 3px dashed $light-blue-int;
+        }
+        & > svg{
+            width: 15px;
+            height: 15px;
+            fill:currentColor;
+        }
+      }
     }
+    
     @include media_min(lg-min-m) {
       display: none;
     }
