added section specials +scss

--- a/wp-content/themes/goiteens/assets/scss/layout/page/blog/_find.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/blog/_find.scss
@@ -153,7 +153,7 @@
       font-family: inherit;
       border: transparent;
       cursor: pointer;
-      background-color: #e03eab;
+      background-color: #AA43A2;
       color: #ffffff;
       font-weight: 700;
       display: flex;
