--- a/wp-content/themes/goiteens/assets/scss/base/_variables.scss
+++ b/wp-content/themes/goiteens/assets/scss/base/_variables.scss
@@ -70,4 +70,5 @@ $color-nm-marker    :   #FFF2CC;
 $color-nm-text-mid  :   #504C5C;
 $color-nm-text-gray :   #3F3F3F;
 $color-nm-counter-bg:   #FFE58A;
-$color-nm-social:       #5D778E;
+$color-nm-social    :   #5D778E;
+$btn-blog           :   #AA43A2;
