--- a/wp-content/themes/goiteens/assets/scss/layout/page/blog/_lesson.scss
+++ b/wp-content/themes/goiteens/assets/scss/layout/page/blog/_lesson.scss
@@ -137,7 +137,7 @@
       padding-top: 12px;
       padding-bottom: 12px;
       padding-left: 24px;
-      border-radius: 0;
+      border-radius: 4px;
       border: none;
       padding: 10px 24px 10px 24px;
       margin-bottom: 24px;
